--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,7 @@
 <nav>
 <ul>
 <li><a href="index.html">Home</a></li>
-<li><a href="#">About</a></li>
+<li><a href="#">Services</a></li>
 <li><a href="gallery.html">Gallery</a></li>
 <li><a href="#contact">Contact Us</a></li>
 </ul>
@@ -36,7 +36,40 @@
   		 	 <img src="images/gallery4.jpg" alt="gallery" />
   		 </div>
   	</div>
-  </section>
+ </section>
+ <section class="contact" id="contact">
+     <div class="container">
+        <div class="content">
+            <div class="c-box form">
+               <form>
+                  <input type="text" placeholder="Enter Name">
+                  <input type="text" placeholder="Enter Email">
+                  <input type="text" placeholder="Enter Mobile">
+                  <textarea placeholder="Enter Message"></textarea>
+                  <button type="submit">Send Message</button>
+               </form>
+            </div>
+            <div class="c-box text">
+                 <h2>Get Connected with ProGym</h2>
+                  <div class="info">
+                    <p>Main Street, Ballincollig, Co. Cork</p>
+                    <p>021 4871234</p>
+                    <p>info@progym.ie</p>
+            </div>
+            <div class="social">
+                       <a href=""><i class="fa fa-facebook"></i></a>
+                       <a href=""><i class="fa fa-instagram"></i></a>
+                       <a href=""><i class="fa fa-youtube-play"></i></a>
+                       <a href=""><i class="fa fa-twitter"></i></a>
+                  </div>
+            
+            </div>
+        </div>
+     </div>
+</section>
+<footer>
+&copy; ProGym - All rights reserved
+</footer>
   
 
 </body>
