--- a/index.html
+++ b/index.html
@@ -15,15 +15,21 @@
 <nav>
 <ul>
 <li><a href="index.html">Home</a></li>
-<li><a href="#">About</a></li>
+<li><a href="#">Services</a></li>
 <li><a href="gallery.html">Gallery</a></li>
 <li><a href="#contact">Contact Us</a></li>
 </ul>
 </nav>
 </header>
 
-<div class="home">
-<img src="images/home.jpg">
+<div class="banner">
+<div class="textBox">
+<h2>More than Fitness</h2>
+<a href="#">Read More</a>
+</div>
+<div class="imgBox">
+<img src="images/man.png">
+</div>
 </div>
 
 <section>
