--- a/index.html
+++ b/index.html
@@ -15,27 +15,50 @@
 <nav>
 <ul>
 <li><a href="index.html">Home</a></li>
-<li><a href="#">Services</a></li>
-<li><a href="gallery.html">Gallery</a></li>
+<li><a href="#about">About</a></li>
+<li><a href="#services">Services</a></li>
+<li><a href="#price">Prices</a></li>
+<li><a href="#gallery">Gallery</a></li>
 <li><a href="#contact">Contact Us</a></li>
 </ul>
+
 </nav>
 </header>
+
 
 <div class="banner">
 <div class="textBox">
 <h2>More than Fitness</h2>
-<a href="#">Read More</a>
+<a href="#about">Read More</a>
 </div>
+
 <div class="imgBox">
 <img src="images/man.png">
 </div>
 </div>
-
-<section>
-
+<section class="about" id="about">
+  	  <div class="container">
+  	  	  <div class="content">
+  	  	  	   <div class="box">
+  	  	  	   	   <div class="inner">
+  	  	  	   	   	   <div class="img">
+  	  	  	   	   	   	  <img src="images/teamworkout.jpg" alt="about" />
+  	  	  	   	   	   </div>
+                       <div class="text">
+                       	   <h4>Team Workouts</h4>
+                       	   <p>Full-body workouts designed to build strength and endurance, using the energy of the group and the expertise of the certified personal trainer to maximize your results.</p>
+                       </div>
+  	  	  	   	   </div>
+  	  	  	   </div>
+  	  	  </div>
+  	  </div>
+</section>
+<div id="price">
+<h2>Choose Your Package</h2>
+</div>
+<section class="price">
 <div class="plan">
-<b> €59 (Monthly)</b>
+<b>€59 (Monthly)</b>
 <div class="box">
 <h3>Body Building Training</h3>
   	<p>Get Free WiFi</p>
@@ -44,7 +67,6 @@
   	<p>Gym and Cardio</p>
   	<p>Service Locker Rooms</p>
   <a href=""> <button class="btn"> Join Now</button></a>
-
 </div>
 </div>
 <div class="plan">
@@ -59,7 +81,6 @@
   	<a href=""> <button class="btn"> Join Now</button></a>
 </div>
 </div>
-
 <div class="plan">
 <b> €400 (12 Months) </b>
 <div class="box">
@@ -74,12 +95,31 @@
 </div>
 </section>
 
+<section class="gallery" id="gallery">
+ <h2>Workout Gallery</h2>
+  	<div class="content">
+  		 <div class="box">
+  		 	 <img src="images/gallery1.jpg" alt="gallery" />
+  		 </div>
+  		 <div class="box">
+  		 	 <img src="images/gallery2.jpg" alt="gallery" />
+  		 </div>
+  		 <div class="box">
+  		 	 <img src="images/gallery3.jpg" alt="gallery" />
+  		 </div>
+  		 <div class="box">
+  		 	 <img src="images/gallery4.jpg" alt="gallery" />
+  		 </div>
+  	</div>
+ </section>
+
 
 
 <section class="contact" id="contact">
      <div class="container">
         <div class="content">
             <div class="c-box form">
+            <h2>Get in Touch:</h2>
                <form>
                   <input type="text" placeholder="Enter Name">
                   <input type="text" placeholder="Enter Email">
@@ -111,7 +151,6 @@
 </footer>
 </body>
 </html>
-
 
 
 
