--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 <div class="banner">
 <div class="textBox">
 <h2>More than Fitness</h2>
-<a href="#about">Read More</a>
 </div>
 
 <div class="imgBox">
@@ -39,7 +38,18 @@
 <section class="about" id="about">
   	  <div class="container">
   	  	  <div class="content">
-  	  	  	   <div class="box">
+            <div class="box">
+  	  	  	   	   <div class="inner">
+  	  	  	   	   	   <div class="img">
+  	  	  	   	   	   	  <img src="images/consultation.jpg" alt="about" />
+  	  	  	   	   	   </div>
+                       <div class="text">
+                       	   <h4>Free Consultation</h4>
+                       	   <p>Through a short survey, conversation and a movement assessment, our team will prescribe the perfect program to get you started and on track to meet your fitness goals.</p>
+                       </div>
+  	  	  	   	   </div>
+  	  	  	   </div>
+             <div class="box">
   	  	  	   	   <div class="inner">
   	  	  	   	   	   <div class="img">
   	  	  	   	   	   	  <img src="images/teamworkout.jpg" alt="about" />
@@ -50,6 +60,17 @@
                        </div>
   	  	  	   	   </div>
   	  	  	   </div>
+            <div class="box">
+  	  	  	   	   <div class="inner">
+  	  	  	   	   	   <div class="img">
+  	  	  	   	   	   	  <img src="images/training.jpg" alt="about" />
+  	  	  	   	   	   </div>
+                       <div class="text">
+                       	   <h4>Personal Training</h4>
+                       	   <p>One-on-one personalized workouts with a certified personal trainer designed to make you stronger from the inside out.</p>
+                       </div>
+  	  	  	   	   </div>
+  	  	  	   </div>
   	  	  </div>
   	  </div>
 </section>
@@ -57,6 +78,7 @@
 <h2>Choose Your Package</h2>
 </div>
 <section class="price">
+
 <div class="plan">
 <b>€59 (Monthly)</b>
 <div class="box">
