--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
 <body>
 <header>
 <h2 id="head">PRO<span>GYM</span></h2>
-
 <nav>
 <ul>
 <li><a href="index.html">Home</a></li>
-<li><a href="#about">About</a></li>
 <li><a href="#services">Services</a></li>
 <li><a href="#price">Prices</a></li>
 <li><a href="#gallery">Gallery</a></li>
@@ -28,20 +26,21 @@
 
 <div class="banner">
 <div class="textBox">
-<h2>More than Fitness</h2>
+<h2>More Than Fitness</h2>
+<p>If you’re looking to join a supportive, welcoming gym community, with people of all fitness levels who want to see you succeed, you’ve come to the right place.</p>
 </div>
 
 <div class="imgBox">
 <img src="images/man.png">
 </div>
 </div>
-<section class="about" id="about">
+<section class="services" id="services">
   	  <div class="container">
   	  	  <div class="content">
             <div class="box">
   	  	  	   	   <div class="inner">
   	  	  	   	   	   <div class="img">
-  	  	  	   	   	   	  <img src="images/consultation.jpg" alt="about" />
+  	  	  	   	   	   	  <img src="images/consultation.jpg" alt="services" />
   	  	  	   	   	   </div>
                        <div class="text">
                        	   <h4>Free Consultation</h4>
@@ -52,7 +51,7 @@
              <div class="box">
   	  	  	   	   <div class="inner">
   	  	  	   	   	   <div class="img">
-  	  	  	   	   	   	  <img src="images/teamworkout.jpg" alt="about" />
+  	  	  	   	   	   	  <img src="images/teamworkout.jpg" alt="services" />
   	  	  	   	   	   </div>
                        <div class="text">
                        	   <h4>Team Workouts</h4>
@@ -63,7 +62,7 @@
             <div class="box">
   	  	  	   	   <div class="inner">
   	  	  	   	   	   <div class="img">
-  	  	  	   	   	   	  <img src="images/training.jpg" alt="about" />
+  	  	  	   	   	   	  <img src="images/training.jpg" alt="services" />
   	  	  	   	   	   </div>
                        <div class="text">
                        	   <h4>Personal Training</h4>
@@ -78,7 +77,6 @@
 <h2>Choose Your Package</h2>
 </div>
 <section class="price">
-
 <div class="plan">
 <b>€59 (Monthly)</b>
 <div class="box">
