--- a/index.html
+++ b/index.html
@@ -224,6 +224,10 @@
                        <a href=""><i class="fa fa-youtube-play"></i></a>
                        <a href=""><i class="fa fa-twitter"></i></a>
                   </div>
+            <div class="times">
+                <h3>Opening Times</h3>
+                <p>Monday - Saturday: 7am - 9pm</p>  
+            </div>
             </div>
         </div>
      </div>
