--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 <li><a href="#schedule">Classes</a></li>
 <li><a href="#gallery">Gallery</a></li>
 <li><a href="#contact">Contact Us</a></li>
-</ul>
+<li><a href="login.html"> <button class="btn"> Login</button></a></li>
 
+</ul>
 </nav>
 </header>
-
 
 <div class="banner">
 <div class="textBox">
@@ -74,6 +74,9 @@
   	  	  </div>
   	  </div>
 </section>
+
+
+
 <div id="price">
 <h2>Choose Your Package</h2>
 </div>
