--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
                   </div>
             <div class="times">
                 <h3>Opening Times</h3>
-                <p>Monday - Saturday: 7am - 9pm</p>  
+                <p>Monday - Saturday: 7am - 9pm</p> 
+                <p>Sundays & Bank Holidays: Closed</p>
             </div>
             </div>
         </div>
