--- a/login.html
+++ b/login.html
@@ -9,20 +9,13 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
-<header>
-<h2 id="head">PRO<span>GYM</span></h2>
+<div class="home">
 <nav>
 <ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="#services">Services</a></li>
-<li><a href="#price">Prices</a></li>
-<li><a href="#schedule">Classes</a></li>
-<li><a href="#gallery">Gallery</a></li>
-<li><a href="#contact">Contact Us</a></li>
+<li><a href="index.html">Back to Home</a></li>
 </ul>
 </nav>
-</header>
-
+</div>
 <div class="loginbox">
 <img src="images/avatar.svg" class="avatar">
 <h1>Member Login</h1>
@@ -36,5 +29,6 @@
 <a href="#">Don't have an account?</a>
 </form>
 </div>
+
 </body>
 </html>
