--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
             <div class="c-box text">
                  <h2>Get Connected with ProGym</h2>
                   <div class="info">
-                    <p>Main Street, Ballincollig, Co. Cork</p>
-                    <p>021 4871234</p>
-                    <p>info@progym.ie</p>
+                    <p><i class="fa fa-map-marker"></i>Main Street, Ballincollig, Co. Cork</p>
+                    <p><i class="fa fa-phone"></i>(021) 4871234</p>
+                    <p><i class="fa fa-envelope"></i>info@progym.ie</p>
                 
             </div>
             <div class="social">
