--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 <body>
 <header>
+<div class="container">
 <h2 id="head">PRO<span>GYM</span></h2>
 <nav>
 <ul>
-<li><a href="index.html">Home</a></li>
+<li><a href="#home">Home</a></li>
 <li><a href="#services">Services</a></li>
 <li><a href="#price">Prices</a></li>
 <li><a href="#schedule">Classes</a></li>
@@ -23,18 +24,25 @@
 
 </ul>
 </nav>
-</header>
 
+</div>
+</header>
+<section class="home" id="home">
 <div class="banner">
 <div class="textBox">
 <h2>More Than Fitness</h2>
 <p>If you’re looking to join a supportive, welcoming gym community, with people of all fitness levels who want to see you succeed, you’ve come to the right place.</p>
 </div>
 
+
 <div class="imgBox">
+
 <img src="images/man.png">
 </div>
 </div>
+</section>
+
+
 <section class="services" id="services">
   	  <div class="container">
   	  	  <div class="content">
@@ -81,6 +89,7 @@
 <h2>Choose Your Package</h2>
 </div>
 <section class="price">
+
 <div class="plan">
 <b>€59 (Monthly)</b>
 <div class="box">
