--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
 <header>
 <div class="container">
-<h2 id="head">PRO<span>GYM</span></h2>
+<div class="logo">
+<a href="#home">PRO<span>GYM</span></a>
+</div>
 <nav>
 <ul>
 <li><a href="#home">Home</a></li>
@@ -20,7 +22,7 @@
 <li><a href="#schedule">Classes</a></li>
 <li><a href="#gallery">Gallery</a></li>
 <li><a href="#contact">Contact Us</a></li>
-<li><a href="login.html"> <button class="btn"> Login</button></a></li>
+<li><a href="login.html"> <button class="btn">Login</button></a></li>
 
 </ul>
 </nav>
@@ -92,6 +94,7 @@
 
 <div class="plan">
 <b>€59 (Monthly)</b>
+
 <div class="box">
 <h3>Body Building Training</h3>
   	<p>Get Free WiFi</p>
@@ -102,6 +105,7 @@
   <a href=""> <button class="btn"> Join Now</button></a>
 </div>
 </div>
+
 <div class="plan">
 <b> €250 (6 Months)</b>
 <div class="box">
