--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <header>
 <div class="container">
 <div class="logo">
-<a href="#home">PRO<span>GYM</span></a>
+<a href="">PRO<span>FITNESS</span></a>
 </div>
-<nav>
+<div class="nav">
 <ul>
 <li><a href="#home">Home</a></li>
 <li><a href="#services">Services</a></li>
@@ -23,22 +23,18 @@
 <li><a href="#gallery">Gallery</a></li>
 <li><a href="#contact">Contact Us</a></li>
 <li><a href="login.html"> <button class="btn">Login</button></a></li>
-
 </ul>
-</nav>
-
+</div>
 </div>
 </header>
+
 <section class="home" id="home">
 <div class="banner">
 <div class="textBox">
 <h2>More Than Fitness</h2>
 <p>If you’re looking to join a supportive, welcoming gym community, with people of all fitness levels who want to see you succeed, you’ve come to the right place.</p>
 </div>
-
-
 <div class="imgBox">
-
 <img src="images/man.png">
 </div>
 </div>
@@ -87,50 +83,65 @@
 
 
 
-<div id="price">
-<h2>Choose Your Package</h2>
-</div>
-<section class="price">
 
-<div class="plan">
-<b>€59 (Monthly)</b>
 
-<div class="box">
-<h3>Body Building Training</h3>
-  	<p>Get Free WiFi</p>
-  	<p>Month to Month</p>
-  	<p>No Time Restrictions</p>
-  	<p>Gym and Cardio</p>
-  	<p>Service Locker Rooms</p>
-  <a href=""> <button class="btn"> Join Now</button></a>
-</div>
-</div>
 
-<div class="plan">
-<b> €250 (6 Months)</b>
-<div class="box">
-<h3>Body Building Training</h3>
-  	<p>Get Free WiFi</p>
-  	<p>Month to Month</p>
-  	<p>No Time Restrictions</p>
-  	<p>Gym and Cardio</p>
-  	<p>Service Locker Rooms</p>
-  	<a href=""> <button class="btn"> Join Now</button></a>
-</div>
-</div>
-<div class="plan">
-<b> €400 (12 Months) </b>
-<div class="box">
-<h3>Body Building Training</h3>
-  	<p>Get Free WiFi</p>
-  	<p>Month to Month</p>
-  	<p>No Time Restrictions</p>
-  	<p>Gym and Cardio</p>
-  	<p>Service Locker Rooms</p>
-  	<a href=""> <button class="btn"> Join Now</button></a>
-</div>
-</div>
-</section>
+<section class="price-package" id="price">
+  	 <div class="container">
+  	 	  <h2>Choose Your Package</h2>
+  	 	  <div class="content">
+  	 	  	  <div class="box">
+  	 	  	  	  <div class="inner">
+  	 	  	  	  	   <div class="price-tag">
+  	 	  	  	  	   	  €59/Monthly
+  	 	  	  	  	   </div>
+  	 	  	  	  	   <div class="text">
+  	 	  	  	  	   	  <h3>Body Building Training</h3>
+  	 	  	  	  	   	  <p>Get Free WiFi</p>
+  	 	  	  	  	   	  <p>Month to Month</p>
+  	 	  	  	  	   	  <p>No Time Restrictions</p>
+  	 	  	  	  	   	  <p>Gym and Cardio</p>
+  	 	  	  	  	   	  <p>Service Locker Rooms</p>
+  	 	  	  	  	   	  <a href="" class="btn">Join Now</a>
+  	 	  	  	  	   </div>
+  	 	  	  	  </div>
+  	 	  	  </div>
+  	 	  	  <div class="box">
+  	 	  	  	  <div class="inner">
+  	 	  	  	  	   <div class="price-tag">
+  	 	  	  	  	   	  €270/6 Months
+  	 	  	  	  	   </div>
+  	 	  	  	  	   <div class="text">
+  	 	  	  	  	   	  <h3>Body Building Training</h3>
+  	 	  	  	  	   	  <p>Get Free WiFi</p>
+  	 	  	  	  	   	  <p>Month to Month</p>
+  	 	  	  	  	   	  <p>No Time Restrictions</p>
+  	 	  	  	  	   	  <p>Gym and Cardio</p>
+  	 	  	  	  	   	  <p>Service Locker Rooms</p>
+  	 	  	  	  	   	  <a href="" class="btn">Join Now</a>
+  	 	  	  	  	   </div>
+  	 	  	  	  </div>
+  	 	  	  </div>
+  	 	  	  <div class="box">
+  	 	  	  	  <div class="inner">
+  	 	  	  	  	   <div class="price-tag">
+  	 	  	  	  	   	  €400/12 Months
+  	 	  	  	  	   </div>
+  	 	  	  	
+  	 	  	  	  	   <div class="text">
+  	 	  	  	  	   	  <h3>Body Building Training</h3>
+  	 	  	  	  	   	  <p>Get Free WiFi</p>
+  	 	  	  	  	   	  <p>Month to Month</p>
+  	 	  	  	  	   	  <p>No Time Restrictions</p>
+  	 	  	  	  	   	  <p>Gym and Cardio</p>
+  	 	  	  	  	   	  <p>Service Locker Rooms</p>
+  	 	  	  	  	   	  <a href="" class="btn">Join Now</a>
+  	 	  	  	  	   </div>
+  	 	  	  	  </div>
+  	 	  	  </div>
+  	 	  </div>
+  	 </div>
+  </section>
 
 <section class="schedule" id="schedule">
   	 <div class="container">
@@ -250,7 +261,7 @@
      </div>
 </section>
 <footer>
-&copy; ProGym - All rights reserved
+&copy; PROFITNESS - All rights reserved
 </footer>
 </body>
 </html>
