--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Gym Web Template</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css" type="text/css" />
+    <script src="script.js" defer></script>
 </head>
 <body>
 <header>
@@ -27,6 +28,7 @@
 </div>
 </div>
 </header>
+
 
 <section class="home" id="home">
 <div class="banner">
