--- a/index.html
+++ b/index.html
@@ -7,15 +7,11 @@
     <title>Gym Web Template</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css" type="text/css" />
-    <script src="script.js" defer></script>
 </head>
 <body>
-<header>
-<div class="container">
-<div class="logo">
-<a href="">PRO<span>FITNESS</span></a>
-</div>
-<div class="nav">
+<nav class="navbar">
+<div class="logo"><a href="">PRO<span>FITNESS</span></a></div>
+<div class="navbar-links">
 <ul>
 <li><a href="#home">Home</a></li>
 <li><a href="#services">Services</a></li>
@@ -26,8 +22,8 @@
 <li><a href="login.html"> <button class="btn">Login</button></a></li>
 </ul>
 </div>
-</div>
-</header>
+</nav>
+
 
 
 <section class="home" id="home">
