--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
     <title>Gym Web Template</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css" type="text/css" />
+    <script src="script.js" defer></script>
 </head>
 <body>
 <nav class="navbar">
 <div class="logo"><a href="">PRO<span>FITNESS</span></a></div>
+<a href="#" class="toggle-button">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
 <div class="navbar-links">
 <ul>
 <li><a href="#home">Home</a></li>
@@ -141,6 +147,7 @@
   	 </div>
   </section>
 
+
 <section class="schedule" id="schedule">
   	 <div class="container">
   	 	  <div class="content">
@@ -201,6 +208,7 @@
   	 	  </div>
   	 </div>
   </section>
+  
 
 <section class="gallery" id="gallery">
  <h2>Workout Gallery</h2>
