--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <section class="home" id="home">
 <div class="banner">
 <div class="textBox">
-<h2>More Than Fitness</h2>
+<h2>Making fitness fun!</h2>
 <p>If you’re looking to join a supportive, welcoming gym community, with people of all fitness levels who want to see you succeed, you’ve come to the right place.</p>
 </div>
 <div class="imgBox">
