--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Gym Web Template</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <script src="script.js" defer></script>
   </head>
   <body>
@@ -36,7 +36,7 @@
           <p>If you’re looking to join a supportive, welcoming gym community, with people of all fitness levels who want to see you succeed, you’ve come to the right place.</p>
         </div>
         <div class="imgBox">
-          <img src="images/man.png">
+          <img src="assets/images/man.png">
         </div>
       </div>
     </section>
@@ -57,7 +57,7 @@
           <div class="box">
             <div class="inner">
               <div class="img">
-                <img src="images/teamworkout.jpg" alt="services" />
+                <img src="assets/images/teamworkout.jpg" alt="services" />
               </div>
               <div class="text">
                 <h4>Team Workouts</h4>
@@ -68,7 +68,7 @@
           <div class="box">
             <div class="inner">
               <div class="img">
-                <img src="images/training.jpg" alt="services" />
+                <img src="assets/images/training.jpg" alt="services" />
               </div>
               <div class="text">
                 <h4>Personal Training</h4>
@@ -189,16 +189,16 @@
       <h2>Workout Gallery</h2>
       <div class="content">
         <div class="box">
-          <img src="images/gallery1.jpg" alt="gallery" />
+          <img src="assets/images/gallery1.jpg" alt="gallery" />
         </div>
         <div class="box">
-          <img src="images/gallery2.jpg" alt="gallery" />
+          <img src="assets/images/gallery2.jpg" alt="gallery" />
         </div>
         <div class="box">
-          <img src="images/gallery3.jpg" alt="gallery" />
+          <img src="assets/images/gallery3.jpg" alt="gallery" />
         </div>
         <div class="box">
-          <img src="images/gallery4.jpg" alt="gallery" />
+          <img src="assets/images/gallery4.jpg" alt="gallery" />
         </div>
       </div>
     </section>
