--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Gym Web Template</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 </head>
 <body>
 <div class="home">
@@ -17,7 +17,7 @@
 </nav>
 </div>
 <div class="loginbox">
-<img src="images/avatar.svg" class="avatar">
+<img src="assets/images/avatar.svg" class="avatar">
 <h1>Member Login</h1>
 <form>
 <p>Username</p>
