--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Gym Web Template</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <script src="script.js" defer></script>
+    <script src="assets/javascript/script.js" defer></script>
   </head>
   <body>
     <nav class="navbar">
@@ -36,7 +36,7 @@
           <p>If you’re looking to join a supportive, welcoming gym community, with people of all fitness levels who want to see you succeed, you’ve come to the right place.</p>
         </div>
         <div class="imgBox">
-          <img src="assets/images/man.png">
+          <img src="assets/images/man.png" alt="services" />
         </div>
       </div>
     </section>
