--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <p>If you’re looking to join a supportive, welcoming gym community, with people of all fitness levels who want to see you succeed, you’ve come to the right place.</p>
         </div>
         <div class="imgBox">
-          <img src="assets/images/man.png" alt="services" />
+          <img src="assets/images/man.png" alt="home" />
         </div>
       </div>
     </section>
@@ -46,7 +46,7 @@
           <div class="box">
             <div class="inner">
               <div class="img">
-                <img src="images/consultation.jpg" alt="services" />
+                <img src="assets/images/consultation.jpg" alt="services" />
               </div>
               <div class="text">
                 <h4>Free Consultation</h4>
