--- a/login.html
+++ b/login.html
@@ -17,14 +17,14 @@
 </nav>
 </div>
 <div class="loginbox">
-<img src="assets/images/avatar.svg" class="avatar">
+<img src="assets/images/avatar.svg" class="avatar" alt="loginbox">
 <h1>Member Login</h1>
 <form>
 <p>Username</p>
-<input type="text" name="" placeholder="Enter Username">
+<input type="text" name="#" required placeholder="Enter Username">
 <p>Password</p>
-<input type="password" name="" placeholder="Enter Password">
-<input type="submit" name="" value="Login">
+<input type="password" name="#" required placeholder="Enter Password">
+<input type="submit" name="#" value="Login">
 <a href="#">Lost your password?</a><br>
 <a href="#">Don't have an account?</a>
 </form>
