--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
       </div>
     </section>
     <footer>
-      &copy; PROFITNESS - All rights reserved
+      &copy; PROFITNESS - All rights reserve
     </footer>
   </body>
 </html>
