--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
         <input type="password" name="#" required placeholder="Enter Password">
         <input type="submit" name="#" value="Login">
         <a href="#">Lost your password?</a><br>
-        <a href="#">Don't have a account?</a>
+        <a href="#">Don't have an account?</a>
       </form>
     </div>
   </body>
