fixed the login button which is nested in the A element & index file passes through the W3C Mark Validator

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><a href="#schedule">Classes</a></li>
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#contact">Contact Us</a></li>
-          <li><a href="login.html"> <button class="btn">Login</button></a></li>
+          <li><a href="login.html" class="btn" role="button">Login</a></li>
         </ul>
       </div>
     </nav>
