inserted html commenting

--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
   </head>
   <body>
+    <!--*Going back to Home Page*-->
     <div class="home">
       <nav>
         <ul>
@@ -16,6 +17,7 @@
         </ul>
       </nav>
     </div>
+    <!--*Login Form*-->
     <div class="loginbox">
       <img src="assets/images/avatar.svg" class="avatar" alt="loginbox">
       <h1>Member Login</h1>
