Fixed the issue around the Social media sites opening in the same tab and get them to open on a separate tab by putting target=blank attribute in anchor tag

--- a/index.html
+++ b/index.html
@@ -231,10 +231,10 @@
                      <p><i class="fa fa-envelope"></i>info@progym.ie</p>
                   </div>
                   <div class="social">
-                     <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
-                     <a href="https://www.instagram.com"><i class="fa fa-instagram"></i></a>
-                     <a href="https://www.youtube.com"><i class="fa fa-youtube-play"></i></a>
-                     <a href="https://www.twitter.com"><i class="fa fa-twitter"></i></a>
+                     <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
+                     <a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i></a>
+                     <a href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube-play"></i></a>
+                     <a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter"></i></a>
                   </div>
                   <div class="times">
                      <h3>Opening Times</h3>
